--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-https://script.google.com/macros/s/AKfycbyLhOfnaT5XTDnoK9sFrYUYDhPXewsHF95iHQ8fY_wHRg8g3frKjiDFTCUwQhwjJVyQ/exec
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +6,7 @@ https://script.google.com/macros/s/AKfycbyLhOfnaT5XTDnoK9sFrYUYDhPXewsHF95iHQ8fY
   <title>Registro de Accesos</title>
   <script>
     async function registrarAcceso() {
-      const scriptURL = 'URL_DE_TU_APLICACIÓN_WEB_DE_APPS_SCRIPT'; // Cambia esto por la URL de tu Apps Script
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbyLhOfnaT5XTDnoK9sFrYUYDhPXewsHF95iHQ8fY_wHRg8g3frKjiDFTCUwQhwjJVyQ/exec'; // Cambia esto por la URL de tu Apps Script
 
       try {
         // Capturar dirección IP
