--- a/index.html
+++ b/index.html
@@ -6,34 +6,34 @@
   <title>Registro de Accesos</title>
   <script>
     async function registrarAcceso() {
+      // URL de tu Apps Script
       const scriptURL = 'https://script.google.com/macros/s/AKfycbxbNnYPZpIMv8NxHTBUMd4pSt7Rera4vXYFqirSnngx39JoEy63Ch6DYTVYNDG7Ua8Q/exec';
 
       try {
-        // Obtener dirección IP
+        // Obtener la dirección IP
         const ipResponse = await fetch('https://api.ipify.org?format=json');
         const ipData = await ipResponse.json();
         const ip = ipData.ip;
 
-        // Obtener información del navegador
+        // Información del navegador
         const userAgent = navigator.userAgent;
 
-        // Enviar datos al Apps Script
-        const response = await fetch(scriptURL, {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({
-            ip: ip,
-            userAgent: userAgent,
-            location: 'No disponible' // Puedes implementar geolocalización si lo deseas
-          })
+        // Ubicación (opcional, puedes mejorarla más tarde)
+        const location = 'No disponible';
+
+        // Construir la URL con los parámetros
+        const params = new URLSearchParams({
+          ip: ip,
+          userAgent: userAgent,
+          location: location
         });
 
-        // Verificar respuesta
+        // Enviar los datos al Apps Script
+        const response = await fetch(`${scriptURL}?${params.toString()}`);
         if (response.ok) {
-          const result = await response.json();
-          console.log('Registro exitoso:', result);
+          console.log('Registro exitoso');
         } else {
-          console.error('Error en el servidor:', response.statusText);
+          console.error('Error en la respuesta del servidor');
         }
       } catch (error) {
         console.error('Error al registrar el acceso:', error);
@@ -45,7 +45,7 @@
   </script>
 </head>
 <body>
-  <h1>Bienvenido a la versión 2.2</h1>
+  <h1>Bienvenido v3</h1>
   <p>Tu acceso ha sido registrado automáticamente.</p>
 </body>
 </html>
